--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <link
       rel="stylesheet"
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
     <link rel="stylesheet" href="css/all.css" />
   </head>
